[package]
name = "rustyCTBN"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ndarray = {version="*", features=["approx"]}
thiserror = "*"
rand = "*"
bimap = "*"
enum_dispatch = "*"
rand_chacha = "*"

[dev-dependencies]
approx = "*"
