[package]
name = "reCTBN"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version="*", features=["approx-0_5"]}
thiserror = "*"
rand = "*"
bimap = "*"
enum_dispatch = "*"
statrs = "*"
rand_chacha = "*"

[dev-dependencies]
approx = "*"
