[tool.poetry]
name = "rectbnpy"
version = "0.1.0"
description = ""
authors = ["AlessandroBregoli <alessandroxciv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^0.13.3"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
